--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@scio-labs/use-inkathon": "^0.0.1-alpha.28",
     "next": "^13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.5",
+    "react-toastify": "^9.1.1",
     "zod": "^3.20.6"
   },
   "devDependencies": {
